--- a/noisy.tex
+++ b/noisy.tex
@@ -57,30 +57,31 @@
       \item Received signal may not be same as transmitted signal
     \end{itemize}
     \begin{figure}
-      \begin{tikzpicture}[scale=0.5]
-        \draw [thick,->] (-2,0.5) -- (-0.2,0.5);
-        \node [left] at (-2,0.5) {\footnotesize source};
+      \footnotesize
+      \begin{tikzpicture}[scale=0.45,->,thick]
+        \draw (-2,0.5) -- (-0.2,0.5);
+        \node [left] at (-2,0.575) {transmitted};
 
-        \draw [thick,->] (0.5,-2) -- (0.5,-0.2);
-        \node [below] at (0.5,-2) {\footnotesize noise};
+        \draw (0.5,-2) -- (0.5,-0.2);
+        \node [below] at (0.5,-2) {noise};
 
         \draw [ultra thick] (0,0) rectangle (1,1);
-        \node [above] at (0.5,1) {\footnotesize transmitter};
+        \node [above] at (0.5,1) {transmitter};
 
-        \draw [thick,->] (1.2,0.5) -- (10.8,0.5);
-        \node [above] at (6,0.5) {\footnotesize channel};
+        \draw (1.2,0.5) -- (10.8,0.5);
+        \node [above] at (6,0.5) {channel};
 
-        \draw [thick,->] (6,-2) -- (6,0.3);
-        \node [below] at (6,-2) {\footnotesize noise};
+        \draw (6,-2) -- (6,0.3);
+        \node [below] at (6,-2) {noise};
 
         \draw [ultra thick] (11,0) rectangle (12,1);
-        \node [above] at (11.5,1) {\footnotesize receiver};
+        \node [above] at (11.5,1) {receiver};
 
-        \draw [thick,->] (11.5,-2) -- (11.5,-0.2);
-        \node [below] at (11.5,-2) {\footnotesize noise};
+        \draw (11.5,-2) -- (11.5,-0.2);
+        \node [below] at (11.5,-2) {noise};
 
-        \draw [thick,->] (12.2,0.5) -- (14,0.5);
-        \node [right] at (14,0.575) {\footnotesize received};
+        \draw (12.2,0.5) -- (14,0.5);
+        \node [right] at (14,0.575) {received};
       \end{tikzpicture}
       \caption{Sources of noise.}
     \end{figure}
